# cargo-vibe

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  TOOLS.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  orchestrator.rs  report.rs
tests/: cli_contracts.rs
