[package]
name = "cargo-vibe"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Unified CLI orchestrator for the Rust AI vibe coding toolchain — runs cargo-context, diff-risk, cargo-impact, and spec-drift as a single workflow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asmuelle/cargo-vibecode"
readme = "README.md"
keywords = ["cli", "ai", "coding", "orchestrator", "cargo"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-vibe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ai-tools-core = { version = "0.1", git = "https://github.com/asmuelle/ai-tools-core.git", tag = "v0.1.0" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
